Fixed problem with bootstrap column size on smaller screens

--- a/sources/styles/sections/_about.scss
+++ b/sources/styles/sections/_about.scss
@@ -1,6 +1,6 @@
 #about {
     background: $light-grey;
-    padding: 160px 0 20px 0;
+    padding: 160px 0 60px;
     line-height: 25pt;
     color: $grey;
     h2 {
