--- a/sources/styles/sections/_works.scss
+++ b/sources/styles/sections/_works.scss
@@ -1,6 +1,6 @@
 #works {
     background: $light-grey;
-    padding: 80px 0 160px 0;
+    padding: 60px 0 160px;
     line-height: 25pt;
     color: $grey;
     h2 {
